# BiTis

./: .gitignore  LICENSE  README.md  README.rst  mps_generator.py  pyproject.toml
Tutorials/: FibrosisGeneration.ipynb  FibrosisTextureAnalysis.ipynb
bitis/: __init__.py
bitis/datasets/: __init__.py  tissue_dataset.csv  tissue_dataset.py
bitis/texture/: object_texture.py  texture.py
bitis/tissue_analysis/: __init__.py  cluster_assembler.py
bitis/tissue_models/: __init__.py
data/paper/: conditioning.npy  generated_paper_1.npy  generated_paper_2.npy  generated_paper_3.npy  generated_paper_4.npy  sim_draw.npy
data/sim_dir_2/: or_tex_10.npy  or_tex_14.npy  or_tex_15.npy  or_tex_16.npy  or_tex_17.npy  or_tex_18.npy  or_tex_19.npy  or_tex_20.npy  or_tex_200_12.npy  or_tex_200_16.npy  or_tex_200_17.npy  or_tex_200_4.npy  or_tex_200_7.npy  or_tex_200_9.npy  or_tex_22.npy  or_tex_23.npy  or_tex_24.npy  or_tex_26.npy  or_tex_29.npy  or_tex_30.npy  or_tex_31.npy  or_tex_32.npy  or_tex_33.npy  or_tex_4.npy  or_tex_5.npy  or_tex_8.npy
data/simulated/: or_tex_1.npy  or_tex_11.npy  or_tex_12.npy  or_tex_13.npy  or_tex_2.npy  (+25 more)
examples/: ds_tutorial.ipynb  fft_distance_builder.ipynb  fft_properties.ipynb  mri.ipynb  mri.py  performance.ipynb  simulation.ipynb  slab_simulation.ipynb  slice_fibrosis.ipynb  stats.ipynb  test.ipynb
two_additional_textures/: generated_1_1.npy  generated_1_2.npy  generated_1_3.npy  generated_1_4.npy  generated_1_5.npy  generated_2_1.npy  generated_2_2.npy  generated_2_3.npy  generated_2_4.npy  generated_2_5.npy  texture_1.npy  texture_2.npy
(+94 files in other folders)
