[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitis"
version = "0.5.0"
authors = [
  { name="Arstanbek Okenov", email="arstanbek.okenov@ugent.be" },
  { name="Timur Nezlobinsky", email="nezlobinsky@gmail.com" }

]
description = ""
readme = "README.rst"
requires-python = ">=3.7, <=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

dependencies = [
  "numpy==1.26.4",
  "scipy==1.14.1",
  "tqdm==4.66.5",
  "pandas==2.2.3",
  "scikit-image==0.24.0",
  "tensorflow==2.19.0",
  "scikit-learn==1.6.1",
  "matplotlib==3.10.1",
  "seaborn==0.13.2",
]

[project.urls]
"Homepage" = ""

[tool.hatch.build.targets.wheel]
packages = ["bitis"]
